# CodexQuotaSync

./: .gitattributes  .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  package-windows-viewer.ps1  setup-windows-viewer.ps1  update-build-all.cmd  update-build-all.ps1
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
android/: README.md  build.gradle  settings.gradle
android/app/: build.gradle  proguard-rules.pro
apps/desktop/: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/docs/: ACTIVITY-HOOKS.zh-CN.md  CODEX-UPDATE-CHECK.md
apps/desktop/scripts/: check-codex-update.ps1  configure-sync.ps1  install-codex-hooks.ps1  test-install-codex-hooks.ps1  uninstall-codex-hooks.ps1
apps/desktop/src/: App.tsx  main.tsx  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: activity.rs  codex.rs  lib.rs  main.rs  models.rs  shutdown.rs  sync.rs
apps/desktop/src-tauri/tests/: activity.rs
docs/: UnRaid部署说明.md  Windows使用说明.md  方案决策记录.md  架构与协议.md
schema/: status-v1.schema.json
server/: .dockerignore  Dockerfile  README.md  atomic_replace_unix.go  atomic_replace_windows.go  docker-compose.yml  go.mod  handler.go  handler_test.go  main.go  main_test.go  ratelimit.go  status.go  status_test.go  store.go  store_test.go
server/unraid/: codex-quota-sync.xml
(+51 files in other folders)
